--- a/Wonderlist/Base.lproj/Main.storyboard
+++ b/Wonderlist/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <color key="backgroundColor" red="0.50440263610000002" green="1" blue="0.77977245699999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MTT-yC-rjI">
-                                <rect key="frame" x="67" y="88" width="240" height="30"/>
+                                <rect key="frame" x="67" y="88" width="240" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -71,10 +71,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="backImageView" destination="JGZ-bQ-du7" id="9fT-WH-wCu"/>
-                        <outlet property="backView" destination="cHj-Hm-gu1" id="zQB-wx-7hy"/>
-                        <outlet property="tableView" destination="pQQ-sC-PE6" id="8dO-UX-0bQ"/>
-                        <outlet property="textField" destination="MTT-yC-rjI" id="aS0-9U-1ea"/>
+                        <outlet property="backImageView" destination="JGZ-bQ-du7" id="DoK-zo-E5h"/>
+                        <outlet property="backView" destination="cHj-Hm-gu1" id="EPy-1D-3QI"/>
+                        <outlet property="tableView" destination="pQQ-sC-PE6" id="Tx7-4V-uqG"/>
+                        <outlet property="textField" destination="MTT-yC-rjI" id="cX3-ER-qc9"/>
                         <segue destination="uGC-aE-R7K" kind="push" identifier="next" id="96s-Uu-0KD"/>
                     </connections>
                 </viewController>
